--- a/readme.html
+++ b/readme.html
@@ -29,6 +29,8 @@
 	<li>Once the configuration file is set up, the installer will set up the tables needed for your site. If there is an error, double check your <code>wp-config.php</code> file, and try again. If it fails again, please go to the <a href="https://wordpress.org/support/forums/">WordPress support forums</a> with as much data as you can gather.</li>
 	<li><strong>If you did not enter a password, note the password given to you.</strong> If you did not provide a username, it will be <code>admin</code>.</li>
 	<li>The installer should then send you to the <a href="wp-login.php">login page</a>. Sign in with the username and password you chose during the installation. If a password was generated for you, you can then click on &#8220;Profile&#8221; to change the password.</li>
+	<li>Recommended to set Lando container <a href="https://lando-wordpress.netlify.app/plugins/wordpress/getting-started.html" target="_blank" rel="noopener noreferrer">Getting Started</a></li>
+
 </ol>
 
 <h2>Updating</h2>
